Update DataChangeListenerAdapter
Use List.get{First,Last}() instead of open-coding their equivalent.

Change-Id: Ieca7c44f97d90d97be9ae0b85645c2b8e3c3c06c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 7819224423db41100a6766e7cdabe2333cec5ec3)